[package]
name = "newsletter"
version = "0.1.0"
authors = ["Matt Woelfel <matt@woelfware.com>"]
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = [] }
chrono = "0.4.39"
config = { version = "0.15.8", default-features = false, features = ["yaml"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-aux = "4.6.0"
sqlx = { version = "0.8.3", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"], default-features = false }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
uuid = { version = "1.13.1", features = ["v4"] }

[dev-dependencies]
reqwest = "0.12.12"
