[package]
name = "newsletter"
version = "0.1.0"
authors = ["Matt Woelfel <matt@woelfware.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.95"
argon2 = { version = "0.5.3", features = ["rand", "std"] }
axum = { version = "0.8.1", features = [] }
base64 = "0.22.1"
chrono = "0.4.39"
config = { version = "0.15.8", default-features = false, features = ["yaml"] }
hex = "0.4.3"
hmac = { version = "0.12.1", features = ["std"] }
htmlescape = "0.3.1"
linkify = "0.10.0"
rand = { version = "0.9.0", features = ["std_rng"] }
rand_08 = { package = "rand", version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-aux = "4.6.0"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"], default-features = false }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
unicode-segmentation = "1.12.0"
urlencoding = "2.1.3"
uuid = { version = "1.13.1", features = ["v4"] }
validator = "0.20.0"

[dev-dependencies]
claims = "0.8.0"
fake = "3.1.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
reqwest = "0.12.12"
serde_json = "1.0.138"
wiremock = "0.6.2"
