[package]
name = "newsletter"
version = "0.1.0"
authors = ["Matt Woelfel <matt@woelfware.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.95"
argon2 = { version = "0.5.3", features = ["rand", "std"] }
async-trait = "0.1.86"
axum = { version = "0.8.1", features = ["macros"] }
# axum-flash 0.8 supports axum 0.7. There is a PR from this repo with axum 0.8 support
axum-flash = { git = "https://github.com/aumetra/axum-flash.git", rev = "0832703" }
base64 = "0.22.1"
chrono = "0.4.39"
config = { version = "0.15.8", default-features = false, features = ["yaml"] }
hex = "0.4.3"
hmac = { version = "0.12.1", features = ["std"] }
htmlescape = "0.3.1"
linkify = "0.10.0"
rand = { version = "0.9.0", features = ["std_rng"] }
rand_08 = { package = "rand", version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-aux = "4.6.0"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"], default-features = false }
thiserror = "2.0.11"
time = "0.3.37"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tower-sessions = "0.14.0"
tower-sessions-redis-store = { version = "0.16.0", features = ["enable-rustls"] }
tracing = "0.1.41"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
unicode-segmentation = "1.12.0"
urlencoding = "2.1.3"
uuid = { version = "1.13.1", features = ["serde", "v4"] }
validator = "0.20.0"

[dev-dependencies]
claims = "0.8.0"
fake = "4.0.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
reqwest = { version = "0.12.12", default-features = false, features = ["cookies", "json", "rustls-tls"] }
serde_json = "1.0.138"
wiremock = "0.6.2"
